@@ -2,7 +2,7 @@
  * ========================LICENSE_START=================================
  * UniversalDB
  * ---
- * Copyright (C) 2014 - 2023 TeamApps.org
+ * Copyright (C) 2014 - 2024 TeamApps.org
  * ---
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,10 +23,12 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.teamapps.universaldb.UniversalDB;
 import org.teamapps.universaldb.context.UserContext;
-import org.teamapps.universaldb.index.ColumnIndex;
+import org.teamapps.universaldb.index.FieldIndex;
 import org.teamapps.universaldb.index.SortEntry;
 import org.teamapps.universaldb.index.TableIndex;
 import org.teamapps.universaldb.index.bool.BooleanIndex;
+import org.teamapps.universaldb.index.file.FileValue;
+import org.teamapps.universaldb.index.file.store.FileStore;
 import org.teamapps.universaldb.index.numeric.*;
 import org.teamapps.universaldb.index.reference.multi.MultiReferenceIndex;
 import org.teamapps.universaldb.index.reference.single.SingleReferenceIndex;
@@ -41,6 +43,7 @@ import org.teamapps.universaldb.index.versioning.RecordUpdate;
 import org.teamapps.universaldb.record.EntityBuilder;
 import org.teamapps.universaldb.schema.Table;
 
+import java.io.File;
 import java.io.IOException;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -54,7 +57,6 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 	private static final Logger log = LoggerFactory.getLogger(AbstractUdbEntity.class);
 	private static final AtomicInteger correlationIdGenerator = new AtomicInteger();
 	private static final int MAX_CORRELATION_ID = 2_000_000_000;
-	private static UniversalDB database;
 
 	private final TableIndex tableIndex;
 	private int id;
@@ -62,10 +64,6 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 	private int correlationId;
 	private EntityChangeSet entityChangeSet;
 	private TransactionRequest transactionRequest;
-
-	public static void setDatabase(UniversalDB database) {
-		AbstractUdbEntity.database = database;
-	}
 
 	public static <ENTITY> List<ENTITY> createEntityList(EntityBuilder<ENTITY> entityBuilder, List<Integer> recordIds){
 		List<ENTITY> list = new ArrayList<>();
@@ -75,10 +73,18 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		return list;
 	}
 
+	public static FileValue createFileValue(File file) {
+		return createFileValue(file, null);
+	}
+
+	public static FileValue createFileValue(File file, String fileName) {
+		return file != null ? FileValue.create(file, fileName) : null;
+	}
+
 
 	public static <ENTITY extends Entity> List<ENTITY> sort(TableIndex table, List<ENTITY> list, String sortFieldName, boolean ascending, UserContext userContext, String ... path) {
 		SingleReferenceIndex[] referencePath = getReferenceIndices(table, path);
-		ColumnIndex column = getSortColumn(table, sortFieldName, referencePath);
+		FieldIndex column = getSortColumn(table, sortFieldName, referencePath);
 		if (column == null) {
 			return list;
 		}
@@ -89,7 +95,7 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 
 	public static <ENTITY extends Entity> List<ENTITY> sort(TableIndex table, EntityBuilder<ENTITY> builder, BitSet recordIds, String sortFieldName, boolean ascending, UserContext userContext, String ... path) {
 		SingleReferenceIndex[] referencePath = getReferenceIndices(table, path);
-		ColumnIndex column = getSortColumn(table, sortFieldName, referencePath);
+		FieldIndex column = getSortColumn(table, sortFieldName, referencePath);
 		if (column == null) {
 			return createUnsortedList(recordIds, builder);
 		}
@@ -116,19 +122,19 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 			referencePath = new SingleReferenceIndex[path.length];
 			TableIndex pathTable = table;
 			for (int i = 0; i < path.length; i++) {
-				referencePath[i] = (SingleReferenceIndex) pathTable.getColumnIndex(path[i]);
+				referencePath[i] = (SingleReferenceIndex) pathTable.getFieldIndex(path[i]);
 				pathTable = referencePath[i].getReferencedTable();
 			}
 		}
 		return referencePath;
 	}
 
-	private static ColumnIndex getSortColumn(TableIndex table, String sortFieldName, SingleReferenceIndex[] referencePath) {
-		ColumnIndex column;
+	private static FieldIndex getSortColumn(TableIndex table, String sortFieldName, SingleReferenceIndex[] referencePath) {
+		FieldIndex column;
 		if (referencePath != null && referencePath.length > 0) {
-			column = referencePath[referencePath.length - 1].getReferencedTable().getColumnIndex(sortFieldName);
+			column = referencePath[referencePath.length - 1].getReferencedTable().getFieldIndex(sortFieldName);
 		} else {
-			column = table.getColumnIndex(sortFieldName);
+			column = table.getFieldIndex(sortFieldName);
 		}
 		return column;
 	}
@@ -166,9 +172,19 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		return id;
 	}
 
+	@Override
+	public String getTable() {
+		return tableIndex.getName();
+	}
+
+	@Override
+	public String getDatabase() {
+		return tableIndex.getDatabaseIndex().getName();
+	}
+
 	public int createdBy() {
-		ColumnIndex columnIndex = tableIndex.getColumnIndex(Table.FIELD_CREATED_BY);
-		return columnIndex != null ? getIntValue((IntegerIndex) columnIndex) : 0;
+		FieldIndex fieldIndex = tableIndex.getFieldIndex(Table.FIELD_CREATED_BY);
+		return fieldIndex != null ? getIntValue((IntegerIndex) fieldIndex) : 0;
 	}
 
 
@@ -190,7 +206,7 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		if (Table.FIELD_ID.equals(fieldName)) {
 			return getId();
 		}
-		ColumnIndex index = tableIndex.getColumnIndex(fieldName);
+		FieldIndex index = tableIndex.getFieldIndex(fieldName);
 		if (index != null) {
 			return index.getGenericValue(getId());
 		} else {
@@ -199,13 +215,13 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 	}
 
 	public void setEntityValue(String fieldName, Object value) {
-		ColumnIndex index = tableIndex.getColumnIndex(fieldName);
+		FieldIndex index = tableIndex.getFieldIndex(fieldName);
 		if (index != null) {
 			setChangeValue(index, value, null);
 		}
 	}
 
-	protected void setChangeValue(ColumnIndex index, Object value, TableIndex tableIndex) {
+	protected void setChangeValue(FieldIndex index, Object value, TableIndex tableIndex) {
 		checkChangeSet();
 		entityChangeSet.addChangeValue(index, value);
 	}
@@ -224,7 +240,7 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		}
 	}
 
-	protected <OTHER_ENTITY extends Entity> List<OTHER_ENTITY> createEntityList(ColumnIndex index, EntityBuilder<OTHER_ENTITY> entityBuilder) {
+	protected <OTHER_ENTITY extends Entity> List<OTHER_ENTITY> createEntityList(FieldIndex index, EntityBuilder<OTHER_ENTITY> entityBuilder) {
 		TransactionRequestRecordValue changeValue = getChangeValue(index);
 		MultiReferenceEditValue editValue = (MultiReferenceEditValue) changeValue.getValue();
 		MultiReferenceIndex multiReferenceIndex = (MultiReferenceIndex) index;
@@ -282,7 +298,7 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		}
 	}
 
-	protected TransactionRequestRecordValue getChangeValue(ColumnIndex index) {
+	protected TransactionRequestRecordValue getChangeValue(FieldIndex index) {
 		if (entityChangeSet == null) {
 			return null;
 		} else {
@@ -290,7 +306,7 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		}
 	}
 
-	protected Object getChangedValue(ColumnIndex index) {
+	protected Object getChangedValue(FieldIndex index) {
 		if (entityChangeSet == null) {
 			return null;
 		} else {
@@ -298,7 +314,7 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		}
 	}
 
-	protected AbstractUdbEntity getReferenceChangeValue(ColumnIndex index) {
+	protected AbstractUdbEntity getReferenceChangeValue(FieldIndex index) {
 		if (entityChangeSet == null) {
 			return null;
 		} else {
@@ -680,7 +696,7 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		}
 	}
 
-	public boolean isChanged(ColumnIndex index) {
+	public boolean isChanged(FieldIndex index) {
 		return entityChangeSet != null && entityChangeSet.isChanged(index);
 	}
 
@@ -691,13 +707,13 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 
 	@Override
 	public boolean isChanged(String fieldName) {
-		return isChanged(tableIndex.getColumnIndex(fieldName));
+		return isChanged(tableIndex.getFieldIndex(fieldName));
 	}
 
 	@Override
 	public void clearFieldChanges(String fieldName) {
 		if (entityChangeSet != null) {
-			entityChangeSet.removeChange(tableIndex.getColumnIndex(fieldName));
+			entityChangeSet.removeChange(tableIndex.getFieldIndex(fieldName));
 		}
 	}
 
@@ -713,10 +729,12 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		}
 	}
 
-	public void saveRecord() {
+
+
+	public void saveRecord(UniversalDB database, int userId, long timestamp) {
 		if (entityChangeSet != null) {
-			this.transactionRequest = database.createTransactionRequest();
-			saveRecord(transactionRequest);
+			this.transactionRequest = database.createTransactionRequest(userId, timestamp);
+			saveRecord(transactionRequest, database);
 			database.executeTransaction(transactionRequest);
 			if (id == 0) {
 				id = transactionRequest.getResolvedRecordIdByCorrelationId(correlationId);
@@ -724,12 +742,23 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		}
 	}
 
-	public void saveRecord(TransactionRequest transactionRequest) {
+	public void saveRecord(UniversalDB database) {
+		if (entityChangeSet != null) {
+			this.transactionRequest = database.createTransactionRequest();
+			saveRecord(transactionRequest, database);
+			database.executeTransaction(transactionRequest);
+			if (id == 0) {
+				id = transactionRequest.getResolvedRecordIdByCorrelationId(correlationId);
+			}
+		}
+	}
+
+	public void saveRecord(TransactionRequest transactionRequest, UniversalDB database) {
 		if (entityChangeSet != null) {
 			this.transactionRequest = transactionRequest;
 			boolean update = !createEntity;
-			TransactionRequestRecord record = TransactionRequestRecord.createOrUpdateRecord(transactionRequest, tableIndex, id, correlationId, update);
-			entityChangeSet.setTransactionRequestRecordValues(transactionRequest, record);
+			TransactionRequestRecord record = TransactionRequestRecord.createOrUpdateRecord(transactionRequest, tableIndex, id, correlationId, update, entityChangeSet);
+			entityChangeSet.setTransactionRequestRecordValues(transactionRequest, record, database);
 			transactionRequest.addRecord(record);
 			clearChanges();
 			createEntity = false;
@@ -749,21 +778,52 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 		return tableIndex.getFQN();
 	}
 
-	public void deleteRecord() {
-		TransactionRequest transactionRequest = database.createTransactionRequest();
-		transactionRequest.addRecord(TransactionRequestRecord.createDeleteRecord(transactionRequest, tableIndex, id));
+	public void deleteRecord(UniversalDB database, int userId, long timestamp) {
+		TransactionRequest transactionRequest = database.createTransactionRequest(userId, timestamp);
+		TransactionRequestRecord deleteRecord = TransactionRequestRecord.createDeleteRecord(transactionRequest, tableIndex, id, entityChangeSet);
+		transactionRequest.addRecord(deleteRecord);
+		if (entityChangeSet != null) {
+			entityChangeSet.setTransactionRecordMetaValues(deleteRecord, database);
+		}
 		clearChanges();
 		database.executeTransaction(transactionRequest);
 	}
 
-	public void restoreDeletedRecord() {
+	public void deleteRecord(UniversalDB database) {
 		TransactionRequest transactionRequest = database.createTransactionRequest();
-		transactionRequest.addRecord(TransactionRequestRecord.createRestoreRecord(transactionRequest, tableIndex, id));
+		TransactionRequestRecord deleteRecord = TransactionRequestRecord.createDeleteRecord(transactionRequest, tableIndex, id, entityChangeSet);
+		transactionRequest.addRecord(deleteRecord);
+		if (entityChangeSet != null) {
+			entityChangeSet.setTransactionRecordMetaValues(deleteRecord, database);
+		}
+		clearChanges();
+		database.executeTransaction(transactionRequest);
+	}
+
+	public void restoreDeletedRecord(UniversalDB database, int userId, long timestamp) {
+		TransactionRequest transactionRequest = database.createTransactionRequest(userId, timestamp);
+		TransactionRequestRecord restoreRecord = TransactionRequestRecord.createRestoreRecord(transactionRequest, tableIndex, id, entityChangeSet);
+		transactionRequest.addRecord(restoreRecord);
+		if (entityChangeSet != null) {
+			entityChangeSet.setTransactionRecordMetaValues(restoreRecord, database);
+		}
+		clearChanges();
+		database.executeTransaction(transactionRequest);
+	}
+
+	public void restoreDeletedRecord(UniversalDB database) {
+		TransactionRequest transactionRequest = database.createTransactionRequest();
+		TransactionRequestRecord restoreRecord = TransactionRequestRecord.createRestoreRecord(transactionRequest, tableIndex, id, entityChangeSet);
+		transactionRequest.addRecord(restoreRecord);
+		if (entityChangeSet != null) {
+			entityChangeSet.setTransactionRecordMetaValues(restoreRecord, database);
+		}
+		clearChanges();
 		database.executeTransaction(transactionRequest);
 	}
 
 	public boolean isRestorable() {
-		return tableIndex.getTableConfig().keepDeleted();
+		return tableIndex.getTableModel().isRecoverableRecords();
 	}
 
 	@Override
@@ -800,10 +860,10 @@ public abstract class AbstractUdbEntity<ENTITY extends Entity> implements Entity
 	public String toString() {
 		StringBuilder sb = new StringBuilder();
 		sb.append(tableIndex.getName()).append(": ").append(getId()).append("\n");
-		List<ColumnIndex> sortedFields = new ArrayList<>();
-		sortedFields.addAll(tableIndex.getColumnIndices().stream().filter(column -> !Table.isReservedMetaName(column.getName())).collect(Collectors.toList()));
-		sortedFields.addAll(tableIndex.getColumnIndices().stream().filter(column -> Table.isReservedMetaName(column.getName())).collect(Collectors.toList()));
-		for (ColumnIndex column : sortedFields) {
+		List<FieldIndex> sortedFields = new ArrayList<>();
+		sortedFields.addAll(tableIndex.getFieldIndices().stream().filter(column -> !Table.isReservedMetaName(column.getName())).toList());
+		sortedFields.addAll(tableIndex.getFieldIndices().stream().filter(column -> Table.isReservedMetaName(column.getName())).toList());
+		for (FieldIndex<?, ?> column : sortedFields) {
 			sb.append("\t").append(column.getName()).append(": ").append(column.getStringValue(getId()));
 			if (isChanged(column)) {
 				TransactionRequestRecordValue changeValue = getChangeValue(column);
